Made Training share one class instead of several classes